# icon_cuda_benchmarks

./: CMakeLists.txt  README.md  atlas_interface.hpp  build_daint.sh  build_homeoffice.sh  build_local.sh  build_mch.sh  build_tsa.sh  convergence.sh  cuda_driver.cpp  cuda_stencil.cu  cuda_stencil.h  diamond_driver.cpp  diamond_driver.cu  diamond_generated.cuh  diamond_stencil.cu  diamond_stencil.h  kh_smag_ref.txt  run_daint.sh  run_tsa.sh  test_atlas_views.cpp  test_build.sh
driver-includes/: defs.hpp
